<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_IoLink_ChannelState" Id="{fa99502a-1b91-0588-1314-1921a399efe5}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE ST_IoLink_ChannelState :
STRUCT
	PortDisabled 				: BOOL;
	PortInStdDigIn 				: BOOL;
	PortInStdDigOut				: BOOL;
	PortInCommunicationOP		: BOOL;
	PortInCommunicationCOMSTOP	: BOOL;
	WatchdogDetected			: BOOL;
	InternalError				: BOOL;
	InvalidDeviceId				: BOOL;
	InvalidVendorId				: BOOL;
	InvalidIoLinkVersion		: BOOL;
	InvalidFrameCapability		: BOOL;
	InvalidCycleTime			: BOOL;
	InvalidPD_InLength			: BOOL;
	InvalidPD_OutLength			: BOOL;
	NoDeviceDetected			: BOOL;
	ErrorPreoperate				: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>